--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -11,6 +11,12 @@
 @import "base.css";
 
 /*//////////////////////////////////////////////////////////////////////////////
+/////////// 3RD PARTY
+//////////////////////////////////////////////////////////////////////////////*/
+
+@import 'jsoneditor/dist/jsoneditor.css';
+
+/*//////////////////////////////////////////////////////////////////////////////
 /////////// TAILWIND CSS
 //////////////////////////////////////////////////////////////////////////////*/
 
