--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -4,3 +4,15 @@ title: Playground
 tags: page
 order: 2
 ---
+
+<section class="playground">
+
+    <div id="code-editor" class="code-editor"></div>
+
+    <button id="parse-button" class="btn btn-lg btn-outlined">
+        Parse
+    </button>
+
+    <div id="json-editor" class="json-editor"></div>
+
+</section>
