--- a/docs/core/overview.njk
+++ b/docs/core/overview.njk
@@ -1,13 +1,13 @@
 ---
 layout: base
-title: Core
-tags: page
+title: Overview
+tags: core
 sideBarCollection: core
-order: 3
+order: 1
 ---
 
 <h1 class="heading-2">
-    @ts-ast-parser/core
+    {{ title }}
 </h1>
 
 
