--- a/docs/_includes/partials/_side-bar.njk
+++ b/docs/_includes/partials/_side-bar.njk
@@ -1,50 +1,24 @@
-<aside id="side-bar" class="side-bar {% if sideBarCollection %}md:visible{% endif %}">
+{% from "macros/detail.njk" import detail with context %}
+
+<aside id="side-bar" class="side-bar {% if not sideBarCollection %}md:hidden{% endif %}">
 
     <button id="side-bar-close-btn" class="btn btn-icon-only mis-auto md:hidden">
         <span class="material-icons">close</span>
     </button>
 
     <nav class="block w-full h-full mt-4">
-
-        {% if sideBarCollection %}
-            <ul class="hidden md:flex md:flex-col md:items-start">
-                {% for item in collections[sideBarCollection] %}
-                <li class="flex items-center {% if (item.url | url) == page.url %}active{% endif %}">
+        <ul class="flex flex-col items-start gap-2">
+            {% for item in collections.page %}
+                <li class="flex items-center {% if (item.url | url) == page.url %}active{% endif %} md:hidden">
                     <a href="{{ item.url | url }}">
                         {{ item.data.title }}
                     </a>
                 </li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-
-        <ul class="flex flex-col items-start md:hidden">
-            {% for item in collections.page %}
-                <li class="flex items-center {% if (item.url | url) == page.url %}active{% endif %}">
-                    {% if item.data.sideBarCollection %}
-                        <details class="w-full">
-                            <summary class="flex items-center h-normal">
-                                <span class="material-icons">chevron_right</span>
-                                <span class="mis-2">{{ item.data.title }}</span>
-                            </summary>
-
-                            <ul class="flex flex-col items-start mis-6">
-                                {% for item in collections[item.data.sideBarCollection] %}
-                                    <li class="flex items-center {% if (item.url | url) == page.url %}active{% endif %}">
-                                        <a href="{{ item.url | url }}">
-                                            {{ item.data.title }}
-                                        </a>
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </details>
-                    {% else %}
-                        <a href="{{ item.url | url }}">
-                            {{ item.data.title }}
-                        </a>
-                    {% endif %}
-                </li>
             {% endfor %}
+
+            {{ detail('Core') }}
+
+            {{ detail('To Markdown') }}
         </ul>
     </nav>
 
