docs: open playground in a new tab

--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -11,13 +11,14 @@
                 </a>
             </li>
             <li class="flex items-center mis-auto">
-                <a class="btn" href="{{ '/playground/' | url }}">
-                    Playground
+                <a class="btn" href="{{ '/core/overview/' | url }}">
+                    Guides
                 </a>
             </li>
             <li class="flex items-center">
-                <a class="btn" href="{{ '/core/overview/' | url }}">
-                    Guides
+                <a class="btn" target="_blank" href="{{ '/playground/' | url }}">
+                    <span>Playground</span>
+                    <span class="material-icons mis-2">open_in_new</span>
                 </a>
             </li>
         </ul>
