docs: add dialog in the playground explaining how it works

--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li class="flex items-center">
-                <a class="btn" target="_blank" href="{{ '/playground/' | url }}">
+                <a class="btn" target="_blank" href="{{ '/playground/' | url }}" rel="noopener noreferrer">
                     <span>Playground</span>
                     <span class="material-icons mis-2">open_in_new</span>
                 </a>
