--- a/docs/_layouts/base.njk
+++ b/docs/_layouts/base.njk
@@ -9,14 +9,19 @@
         name="description"
         content="{% if description %}{{ description }}{% else %}{{ site.description }}{% endif %}"
     />
+
     <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet"
     />
+
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}"/>
 
