--- a/docs/index.njk
+++ b/docs/index.njk
@@ -19,7 +19,12 @@ withHeader: true
     This metadata then can be used to generate documentation.
 </p>
 
-<a class="btn btn-lg btn-outlined mx-auto mt-10" target="_blank" href="{{ '/playground/' | url }}">
+<a
+    class="btn btn-lg btn-outlined mx-auto mt-10"
+    target="_blank"
+    href="{{ '/playground/' | url }}"
+    rel="noopener noreferrer"
+>
     <span>Playground</span>
     <span class="material-icons mis-2">open_in_new</span>
 </a>
