--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -7,13 +7,13 @@ order: 2
 
 <section class="playground">
 
-    <div id="code-editor" class="code-editor"></div>
+    <div id="code-editor" class="code-editor skeleton"></div>
 
     <button id="parse-button" class="btn btn-lg btn-outlined">
         Parse
     </button>
 
-    <div id="json-editor" class="json-editor"></div>
+    <div id="json-editor" class="json-editor skeleton"></div>
 
 </section>
 
