--- a/docs/assets/css/utilitites.css
+++ b/docs/assets/css/utilitites.css
@@ -30,3 +30,31 @@
 .h-normal {
     height: var(--height);
 }
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// EFFECTS
+//////////////////////////////////////////////////////////////////////////////*/
+
+.skeleton {
+    position: relative;
+    overflow: hidden;
+    pointer-events: none;
+
+    &::after {
+        content: "Loading...";
+        font-family: var(--font-sans);
+        font-size: var(--font-size-lg);
+        font-weight: bold;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        z-index: var(--skeleton-z-index);
+        color: hsl(var(--color-text));
+        background-color: hsl(var(--color-neutral-100));
+    }
+}
