--- a/docs/assets/css/components.css
+++ b/docs/assets/css/components.css
@@ -53,10 +53,27 @@
 .btn-outlined {
     border: 1px solid hsl(var(--color-text));
 
-    &:active,
-    &:hover {
-        color: hsl(var(--color-neutral-0));
-        background-color: hsl(var(--color-text));
+    @media (hover: hover) and (pointer: fine) {
+        &:active,
+        &:hover {
+            color: hsl(var(--color-neutral-0));
+            background-color: hsl(var(--color-text));
+        }
+    }
+}
+
+.btn-filled {
+    color: hsl(var(--color-neutral-0));
+    background-color: hsl(var(--color-neutral-800));
+
+    @media (hover: hover) and (pointer: fine) {
+        &:hover {
+            background-color: hsl(var(--color-neutral-700));
+        }
+
+        &:active {
+            background-color: hsl(var(--color-neutral-900));
+        }
     }
 }
 
@@ -253,24 +270,43 @@
 //////////////////////////////////////////////////////////////////////////////*/
 
 .playground {
+    position: relative;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: calc(100% - var(--navbar-height));
     width: 100%;
     gap: theme("spacing.4");
 
     @screen md {
-        flex-direction: row;
+        height: 100%;
+    }
+}
+
+.playground__controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    background-color: hsl(var(--color-neutral-200));
+    width: 100%;
+    height: var(--navbar-height);
+    padding-inline: theme("spacing.4");
+
+    @screen md {
+        display: none;
     }
 }
 
 .code-editor,
 .json-editor {
-    display: block;
+    position: absolute;
+    inset: 0;
     flex: 1;
     height: 100%;
     width: 100%;
+
+    @screen md {
+        position: relative;
+    }
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
@@ -280,9 +316,12 @@
 .dialog {
     position: fixed;
     inset: 0;
-    overflow: hidden;
-    z-index: var(--dialog-z-index);
+    max-inline-size: 100vw;
+    max-block-size: 100vh;
+    inline-size: 100vw;
+    block-size: 100vh;
     transition: opacity .5s ease;
+    z-index: var(--dialog-z-index);
 
     &:not([open]) {
         pointer-events: none;
@@ -293,6 +332,8 @@
         inset-block-start: 10%;
         inset-inline-start: 50%;
         transform: translateX(-50%);
+        inline-size: unset;
+        block-size: unset;
         max-inline-size: 90vw;
         max-block-size: min(80vh, 100%);
         border-radius: var(--border-radius-lg);
