--- a/docs/playground.njk
+++ b/docs/playground.njk
@@ -6,11 +6,9 @@ order: 2
 ---
 
 <!-- Only visible in small screens -->
-<div class="playground__controls">
-    <button id="change-view-button" class="btn btn-filled">
-        Change View
-    </button>
-</div>
+<button id="change-view-button" class="hidden btn btn-filled playground__view-control">
+    Change View
+</button>
 
 <section class="playground">
 
